--- a/view/pagesManage.html
+++ b/view/pagesManage.html
@@ -49,7 +49,6 @@
 						<li><a href="#footer" data-toggle="tab">Add page <i class="fa"></i></a></li>
 					</ul>	
 
-						<form id="hfForm" method="post" action="IOFiles.php" class="form-horizontal">
 							<div class="tab-content">
 								<div class="tab-pane active" id="header">
 									<div class="form-group">
@@ -63,71 +62,36 @@
 												<td>Delete</td>
 											</tr>
 												{{users}}
-										</table>	
-
-										<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-											<div class="modal-dialog">
-												<div class="modal-content">
-													<div class="modal-header">
-													<button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
-													<h4 class="modal-title" id="myModalLabel">Edit user</h4>
-													</div>
-													<div class="modal-body">
-															<div class="form-group input-group">
-																<span class="input-group-addon"><i class="fa fa-key"></i></span>
-																<input type="password" class="form-control" name="newPassword" value="" placeholder="New Password">		
-															</div>
-													</div>
-													<div class="modal-footer">
-														<button id="saveButton" type="button" class="btn btn-primary">Save changes</button>
-														<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>					
-												</div>
-											</div>
-										  </div>
-										</div>	
-										
-										<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-											<div class="modal-dialog">
-												<div class="modal-content">
-													<div class="modal-header">
-													<button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
-													<h4 class="modal-title" id="myModalLabel">Delete user</h4>
-													</div>
-													<div class="modal-body">
-													<p>Delete user ?</p>
-													</div>
-													<div class="modal-footer">
-														<button id="saveButton" type="button" class="btn btn-primary">Yes</button>
-														<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>					
-													</div>
-												</div>
-											</div>
-										</div>	
+										</table>
 									</div>
 								</div>
-
+								
 								<div class="tab-pane" id="footer">
 									<div class="form-group">
 									<br>	
 									<div class="col-md-5">
-										<form role="form" data-toggle="validator" action="#" method="POST">
+										<form role="form" enctype="multipart/form-data" data-toggle="validator" action="PagesManageUtils.php" method="POST">
 											<div class="form-group">
-												<input required type="text" pattern="^([_A-z0-9]){3,}$" class="form-control" name="title" placeholder="Title" />
+												<input required type="text" pattern="^([_A-z0-9]){3,30}$" class="form-control" name="title" placeholder="Title" />
 											</div>
 											<div class="form-group">
 												<label>File input</label>
-												<input type="file">													
+												<input type="file" name="imgLink">													
 											</div>
 											<div class="form-group">
-												<textarea class="form-control" rows="3" placeholder="Content"></textarea>
-											</div>											
-											<input class="btn btn-default" name="valid" type="submit" value="Validate">
+												<textarea name="content" class="form-control" rows="3" placeholder="Content"></textarea>
+											</div>	
+											<input type="hidden" value="createPage" name="mode">
+											<div class="form-group" style="margin-top: 15px;">
+												<div class="col-xs-1">
+													<button type="submit" class="btn btn-default">Validate</button>
+												</div>
+											</div>
 										</form>
 									</div>
 									</div>
 								</div>
-							</div>
-						</form>			
+							</div>		
                 </div>				
             </div>
         </div>
