ajout liste des pages

--- a/view/pagesManage.html
+++ b/view/pagesManage.html
@@ -56,12 +56,11 @@
 										<table class="table table-hover">
 											<tr style="font-weight : bold;">
 												<td>ID</td>
-												<td>Username</td>
-												<td>Password</td>
-												<td>Edit</td>
-												<td>Delete</td>
+												<td>Title</td>
+												<td>Content</td>
+												<td>Image</td>
 											</tr>
-												{{users}}
+												{{pages}}
 										</table>
 									</div>
 								</div>
