--- a/view/pagesManage.html
+++ b/view/pagesManage.html
@@ -59,6 +59,7 @@
 												<td>Title</td>
 												<td>Content</td>
 												<td>Image</td>
+												<td>Created</td>
 											</tr>
 												{{pages}}
 										</table>
