--- a/view/pagesManage.html
+++ b/view/pagesManage.html
@@ -76,7 +76,7 @@
 												<select id="selectTpl" class="form-control">
 													<option id="1">Article</option>
 													<option id="2">List</option>
-													<option id="2">Link</option>
+													<option id="3">Link</option>
 												</select>
 											</div>
 											
@@ -93,6 +93,7 @@
 														<textarea name="content" class="form-control" rows="3" placeholder="Content"></textarea>
 													</div>	
 													<input type="hidden" value="createPage" name="mode">
+													<input type="hidden" value="1" name="tpl">
 													<div class="form-group" style="margin-top: 15px;">
 														<div class="col-xs-1">
 															<button type="submit" class="btn btn-default">Validate</button>
@@ -102,11 +103,12 @@
 											</div>
 											
 											<div id="form2">
-												<form role="form" enctype="multipart/form-data" data-toggle="validator" action="PagesManageUtils.php" method="POST">
+												<form role="form" data-toggle="validator" action="PagesManageUtils.php" method="POST">
 													<div class="form-group">
 														<input required type="text" pattern="^([_A-z0-9]){3,30}$" class="form-control" name="title" placeholder="Title" />
 													</div>
 													<input type="hidden" value="createPage" name="mode">
+													<input type="hidden" value="2" name="tpl">
 													<div class="form-group" style="margin-top: 15px;">
 														<div class="col-xs-1">
 															<button type="submit" class="btn btn-default">Validate</button>
@@ -116,7 +118,7 @@
 											</div>
 											
 											<div id="form3">
-												<form role="form" enctype="multipart/form-data" data-toggle="validator" action="PagesManageUtils.php" method="POST">
+												<form role="form" data-toggle="validator" action="PagesManageUtils.php" method="POST">
 													<div class="form-group">
 														<input required type="text" pattern="^([_A-z0-9]){3,30}$" class="form-control" name="title" placeholder="Title" />
 													</div>
@@ -124,6 +126,7 @@
 														<input required type="text" pattern="^([_&:/A-z0-9]){3,30}$" class="form-control" name="title" placeholder="Link (http://www.exemple.com)" />
 													</div>
 													<input type="hidden" value="createPage" name="mode">
+													<input type="hidden" value="3" name="tpl">
 													<div class="form-group" style="margin-top: 15px;">
 														<div class="col-xs-1">
 															<button type="submit" class="btn btn-default">Validate</button>
@@ -141,6 +144,10 @@
         </div>
 	</div>
 	<script>
+	$( document ).ready(function() {
+		$('#form2, #form3').hide();
+	});
+	 
 	$('#selectTpl').change(function() {
 	   $('#form1, #form2, #form3').hide();
 	   $('#form' + $(this).find('option:selected').attr('id')).show();
