Ajout page en base

--- a/view/pagesManage.html
+++ b/view/pagesManage.html
@@ -93,7 +93,7 @@
 														<textarea name="content" class="form-control" rows="3" placeholder="Content"></textarea>
 													</div>	
 													<input type="hidden" value="createPage" name="mode">
-													<input type="hidden" value="1" name="tpl">
+													<input type="hidden" value="1" name="template">
 													<div class="form-group" style="margin-top: 15px;">
 														<div class="col-xs-1">
 															<button type="submit" class="btn btn-default">Validate</button>
@@ -108,7 +108,7 @@
 														<input required type="text" pattern="^([_A-z0-9]){3,30}$" class="form-control" name="title" placeholder="Title" />
 													</div>
 													<input type="hidden" value="createPage" name="mode">
-													<input type="hidden" value="2" name="tpl">
+													<input type="hidden" value="2" name="template">
 													<div class="form-group" style="margin-top: 15px;">
 														<div class="col-xs-1">
 															<button type="submit" class="btn btn-default">Validate</button>
@@ -123,9 +123,9 @@
 														<input required type="text" pattern="^([_A-z0-9]){3,30}$" class="form-control" name="title" placeholder="Title" />
 													</div>
 													<div class="form-group">
-														<input required type="text" pattern="^([_&:/A-z0-9]){3,30}$" class="form-control" name="title" placeholder="Link (http://www.exemple.com)" />
+														<input required type="text" pattern="^([_&:/A-z0-9]){3,30}$" class="form-control" name="link" placeholder="Link (http://www.exemple.com)" />
 													</div>
-													<input type="hidden" value="createPage" name="mode">
+													<input type="hidden" value="createPage" name="template">
 													<input type="hidden" value="3" name="tpl">
 													<div class="form-group" style="margin-top: 15px;">
 														<div class="col-xs-1">
