--- a/template/article.html
+++ b/template/article.html
@@ -2,23 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="style.css" />
-        <title>VAR TITRE</title>
+        <link rel="stylesheet" href="../css/article.css" />
+        <title>{{title}}</title>
     </head>
 
     <body>
-        <div id="bloc_page">
+        <div class="content">
             <header>
             </header>
 			
-			<h1>VAR TITRE</h1>
+			<h1>{{title}}</h1>
 			
             <section>
                 <article>
-                    <img src="VAR IMG" alt="" />
-                    <p>VAR CONTENT</p>
+                    <img src="{{imgLink}}" alt="" />
+                    <p>{{content}}</p>
                 </article>
-
             </section>
             
             <footer>
