Affichage des page article list et link

--- a/template/article.html
+++ b/template/article.html
@@ -9,8 +9,7 @@
     <body>
         <div class="content">
             <header>
-            </header>
-			
+		{{header}}		</header>	
 			<h1>{{title}}</h1>
 			
             <section>
