--- a/template/link.html
+++ b/template/link.html
@@ -8,16 +8,16 @@
 
     <body>
         <div class="content">
-            <header>
+            <header>{{footer}}	
             </header>
 			
 			<h1>{{title}}</h1>
 			
 			<section>
-                <a href="{{link}}">Link<a>
+                <a href="{{link}}">{{link}}<a>
             </section>
 			
-            <footer>
+            <footer>{{footer}}	
             </footer>
         </div>
     </body>
