--- a/view/pageRow.html
+++ b/view/pageRow.html
@@ -9,13 +9,10 @@
 		{{content}}
 	</td>
 	<td>
-		<img src="{{imgLink}}" alt=""/>
-	</td>
-	<td>
-		<form id="createdPage" action="PagesManageUtils.php" method="POST">		
+		<form id="createdPage{{id}}" action="PagesManageUtils.php" method="POST">		
 			<input type="hidden" name="mode" value="generatePage"/>
-			<input type="hidden" name="page" value="{{id}}"/>
+			<input type="hidden" name="pageid" value="{{id}}"/>
 		</form>
-		<a href="#" onclick="document.getElementById('createdPage').submit(); return false;">{{created}}</a>
+		<a href="#" onclick="document.getElementById('createdPage{{id}}').submit(); return false;">create</a>
 	</td>
 </tr>
