--- a/template/list.html
+++ b/template/list.html
@@ -8,12 +8,12 @@
 
     <body>
         <div class="content">
-            <header>
+            <header>{{header}}	
             </header>
 			
 			<h1>{{title}}</h1>
 
-            <footer>
+            <footer>{{footer}}	
             </footer>
         </div>
     </body>
