--- a/template/article.html
+++ b/template/article.html
@@ -2,18 +2,20 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="../css/article.css" />
+        <link rel="stylesheet" href="css/article.css" />
         <title>{{title}}</title>
     </head>
 
     <body>
         <div class="content">
             <header>{{header}}</header>	
+			<nav><ul>{{nav}}</ul></nav>
+			
 			<h1>{{title}}</h1>
 			
             <section>
                 <article>
-                    <img src="{{imgLink}}" alt="" />
+                    {{imgLink}}
                     <p>{{content}}</p>
                 </article>
             </section>
