--- a/template/link.html
+++ b/template/link.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="../css/list.css" />
+        <link rel="stylesheet" href="css/list.css" />
         <title>{{title}}</title>
     </head>
 
